[package]
name = "argyle"
version = "0.10.1"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2021"
rust-version = "1.81"
description = "A lightweight, agnostic CLI argument parser."
license = "WTFPL"
repository = "https://github.com/Blobfolio/argyle"
readme = "README.md"
exclude = [
	".github",
	".gitignore",
	".righteous-sandbox.json",
	"doc",
	"examples",
	"justfile",
	"release",
]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"

[package.metadata.bashman]
name = "Argyle"
