[package]
name = "argyle"
version = "0.12.3"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2024"
rust-version = "1.88"
description = "A lightweight, agnostic CLI argument parser."
license = "WTFPL"
repository = "https://github.com/Blobfolio/argyle"
readme = "README.md"
exclude = [
	".github",
	".gitignore",
	".righteous-sandbox.json",
	"doc",
	"examples",
	"justfile",
	"release",
]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
features = [ "try_paths" ]
default-target = "x86_64-unknown-linux-gnu"

[package.metadata.bashman]
name = "Argyle"

[features]
default = []

# Expose Argument::Path variant, used for unassociated-and-unrecognized
# arguments where std::fs::exists() == Ok(true).
try_paths = []
